--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -21,7 +21,7 @@
   --color-info: oklch(62% 0.214 259.815);
   --color-info-content: oklch(100% 0 0);
   --color-success: oklch(90.13% 0.153 164.14);
-  --color-success-content: oklch(100% 0 0);
+  --color-success-content: oklch(37% 0.077 168.94);
   --color-warning: oklch(88.37% 0.135 79.94);
   --color-warning-content: oklch(100% 0 0);
   --color-error: oklch(78.66% 0.15 28.47);
@@ -43,4 +43,19 @@
 
 body {
   font-family: Arial, Helvetica, sans-serif;
+}
+.bar-blue .bar{
+  fill: #3b82f6 !important;;
+}
+.bar-yellow .bar{
+  fill: #FFEB3B !important;;
+}
+.bar-orange .bar{
+  fill: #f97316 !important;;
+}
+.bar-green .bar{
+  fill: #4CAF50 !important;;
+}
+.bar-gray .bar{
+  fill: #9ca3af !important;;
 }
